Add simple message to propose to see competences

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -519,6 +519,7 @@
                 "subtitle": "Continue your personalised test or send your results",
                 "title": "Campaigns"
             },
+            "empty-dashboard-message": "",
             "presentation": "<h2>Hi {firstname}, welcome to your dashboard.</h2><p>Quickly and easily access all your tests in progress.<br>Follow the evolution of your Pix score and check if your profile is ready for certification.</p>",
             "recommended-competences": {
                 "profile-link": "See all skills",
