[MON-pix] changed consentment sentence in english

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -77,7 +77,7 @@
                 "action": "Begin",
                 "announcement": "Start your personalised test.'<br>' Sign up or log in to the Pix platform and start your test.",
                 "details": "During this personalised test, you will be able to:",
-                "legal": "Information about your progress will be sent to the organiser so they can provide support. Your test results will only be shared with your permission.",
+                "legal": "By clicking on “Begin“, information about your progress will be shared with the organiser so they can assist you if necessary. At the end of your personalised test, your results will be shared with your organisation when clicking on “Submit my results“.",
                 "evaluate": {
                     "title": "Assess your digital skills with fun tests on different subjects, such as:",
                     "complement": "The Pix public service for the assessment and certification of digital skills enables assessment of your level in 5 major skill areas covering current uses of digital technology.",
