Use Alt attributes to give information about link to homepage

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -1045,7 +1045,7 @@
     "navigation": {
         "copyrights": "©",
         "error": "Error",
-        "homepage": "Homepage",
+        "homepage": "Pix's Homepage",
         "back-to-homepage": "Return to homepage",
         "back-to-profile": "Return to profile",
         "footer": {
