--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -1045,7 +1045,7 @@
     "navigation": {
         "copyrights": "©",
         "error": "Erreur",
-        "homepage": "Page d'accueil",
+        "homepage": "Page d'accueil de Pix",
         "back-to-homepage": "Revenir à la page d’accueil",
         "back-to-profile": "Revenir au profil",
         "footer": {
