--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -526,7 +526,13 @@
                 "link-to-competences": "Voir mes compétences",
                 "message": "<h2>Bravo vous avez terminé les compétences recommandées !</h2> <p> Pour aller plus loin continuez à vous entraîner en retentant des compétences. </p>"
             },
-            "presentation": "<h2>Bonjour {firstname}, découvrez votre tableau de bord.</h2><p>Accédez rapidement et facilement à vos parcours et vos tests de compétence déjà commencés.<br>Retrouvez l’évolution de votre score Pix et vérifiez si votre profil est prêt pour la certification Pix.</p>",
+            "presentation": {
+                "link": {
+                    "text": "En savoir plus",
+                    "url": "https://pix.fr/actualites/decouvrez-votre-nouveau-tableau-de-bord"
+                },
+                "message": "<h2>Bonjour {firstname}, découvrez votre tableau de bord.</h2><p>Accédez rapidement et facilement à vos parcours et vos tests de compétence déjà commencés.<br>Retrouvez l’évolution de votre score Pix et vérifiez si votre profil est prêt pour la certification Pix.</p>"
+            },
             "recommended-competences": {
                 "profile-link": "Toutes les compétences",
                 "subtitle": "Explorez les compétences recommandées pour vous.",
