--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -5,6 +5,7 @@
   "current-lang": "en",
   "common": {
     "actions": {
+      "back": "Back",
       "cancel": "Cancel"
     },
     "pagination": {
@@ -31,11 +32,25 @@
   },
   "pages": {
     "campaign": {
+      "actions": {
+        "export-results": "Export the results (.csv)",
+        "unarchive": "Unarchive the campaign"
+      },
+      "archived": "Archived campaign",
+      "code": "Code",
       "filters": {
         "actions": {
           "clear": "Clear filters"
         },
         "participations-count": "{count, plural, =0 {0 participants} =1 {1 participant} other {{count} participants}}"
+      },
+      "participations-count": "Participants",
+      "shared-participations-count": "Profiles submitted",
+      "tab": {
+        "collective-results": "Collective results",
+        "details": "Details",
+        "participants": "Participants ({count})",
+        "review": "Review"
       }
     },
     "campaigns-list": {
