[orga] Display certification menu entry

--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -21,6 +21,7 @@
   "navigation": {
     "main": {
       "campaigns": "Campaigns",
+      "certification": "Certification",
       "documentation": "Documentation",
       "students-sco": "Students",
       "students-sup": "Students",
