--- a/orga/translations/fr.json
+++ b/orga/translations/fr.json
@@ -21,6 +21,7 @@
   "navigation": {
     "main": {
       "campaigns": "Campagnes",
+      "certification": "Certification",
       "documentation": "Documentation",
       "students-sco": "Élèves",
       "students-sup": "Étudiants",
