--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -167,6 +167,24 @@
           "by-name": "Search a campaign"
         }
       }
+    },
+    "campaign-review": {
+      "description": "According to the target profile selected and the results of your campaign, Pix recommends focusing on the following subjects, sorted by relevance ({bubble}).",
+      "header": {
+        "title": "Review by subject",
+        "relevance": "Relevance",  
+        "subjects": "Subjects ({count, plural, =0 {-} other {{count}}})"
+      },
+      "title": "Recommendations of subjects to focus on",
+      "tube-recommendations": {
+        "name": "Tutorial",
+        "recommended-tutorial": "{count, plural, =1 {1 tutorial} other{{count} tutorials}} recommended by the Pix community",
+        "show-tutorial": "Show all tutorials",
+        "subject": "Subject",
+        "tutorial-source": "By {source}",
+        "tutorial-total":"{count, plural, =1 {1 tutorial} other {{count} tutorials}}"
+      },
+      "waiting-results": "Waiting results"
     }
   }
 }
