[APP] Change new-email translation

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -958,7 +958,7 @@
                 "save-button": "",
                 "fields": {
                     "new-email": {
-                        "label": "Email address"
+                        "label": ""
                     },
                     "new-email-confirmation": {
                         "label": ""
