[orga] Add certification page with text only

--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -68,6 +68,10 @@
       "shared-date": "Sent on",
       "start-date": "Started on"
     },
+    "certifications": {
+      "description": "You can export the certification results for all classes in a csv file.",
+      "title": "My certifications"
+    },
     "campaign": {
       "actions": {
         "export-results": "Export the results (.csv)",
