Fix Chrome beforeunload call
By adding a event.returnValue, some browsers may display it as the popup message.

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -391,7 +391,8 @@
                 "qroc-number": "Please enter a number, or skip the question."
             },
             "timed": {
-                "cannot-answer": "You've run out of time."
+                "cannot-answer": "You've run out of time.",
+                "page-refresh-warning": ""
             }
         },
         "checkpoint": {
