[ORGA] Rename "Certification" page to "Certifications" (plural)

--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -21,7 +21,7 @@
   "navigation": {
     "main": {
       "campaigns": "Campaigns",
-      "certification": "Certification",
+      "certifications": "Certifications",
       "documentation": "Documentation",
       "students-sco": "Students",
       "students-sup": "Students",
