--- a/orga/translations/fr.json
+++ b/orga/translations/fr.json
@@ -21,7 +21,7 @@
   "navigation": {
     "main": {
       "campaigns": "Campagnes",
-      "certification": "Certification",
+      "certifications": "Certifications",
       "documentation": "Documentation",
       "students-sco": "Élèves",
       "students-sup": "Étudiants",
