feat: handle org/fr links

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -1081,13 +1081,11 @@
         "back-to-profile": "Return to profile",
         "footer": {
             "a11y": "Accessibility",
+            "data-protection-policy": "Personal data protection policy",
             "eula": "Terms and conditions",
             "help-center": "Help center",
             "link-a11y": "https://pix.org/en-gb/accessibility",
-            "link-eula": "https://pix.org/en-gb/terms-and-conditions",
-            "link-protection-policy": "https://pix.org/en-gb/personal-data-protection-policy",
-            "link-help-center": "https://pix.org/en-gb/faq-pix",
-            "protection-policy": "Personal data protection policy"
+            "link-help-center": "https://pix.org/en-gb/faq-pix"
         },
         "main": {
             "code": "I have a code",
