--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -1081,13 +1081,11 @@
         "back-to-profile": "Revenir au profil",
         "footer": {
             "a11y": "Accessibilité",
+            "data-protection-policy": "Politique de protection des données",
             "eula": "CGU",
             "help-center": "Centre d'aide",
             "link-a11y": "https://pix.fr/accessibilite",
-            "link-eula": "https://pix.fr/conditions-generales-d-utilisation",
-            "link-protection-policy": "https://pix.fr/politique-protection-donnees-personnelles-app",
-            "link-help-center": "https://pix.fr/aide",
-            "protection-policy": "Politique de protection des données"
+            "link-help-center": "https://pix.fr/aide"
         },
         "main": {
             "code": "J'ai un code",
