[CLEAN] Redesign of QCU solution panel

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -464,6 +464,10 @@
                 "timedout": {
                     "title": "You've run out of time",
                     "tooltip": "Out of time"
+                },
+                "tips": {
+                    "other-proposition": "Other proposition",
+                    "your-answer": "Your answer"
                 }
             }
         },
