--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -704,9 +704,9 @@
                 "congrats": "Well done!",
                 "details": "details",
                 "image-info": {
-                    "first-level": "",
-                    "level": "",
-                    "no-level": ""
+                    "first-level": "Level 1 in progress: {percentageAheadOfNextLevel}% successfully completed.",
+                    "level": "Current level: {currentLevel}. {percentageAheadOfNextLevel}% remaining to reach next level",
+                    "no-level": "Skill not started."
                 }
             },
             "first-title": "You have 16 skills to test. '<br>'Get your thinking hat on and off we go!",
