[API] Move account creation template translations to params

--- a/api/translations/fr.json
+++ b/api/translations/fr.json
@@ -86,15 +86,17 @@
     "here": "ici"
   },
   "pix-account-creation-email": {
-    "title": "Votre compte Pix a bien été créé !",
-    "subtitle": "Vous pouvez désormais commencer les tests.",
-    "goToPix": "Commencer les tests",
-    "disclaimer": "Si vous n'êtes pas à l’origine de cette création de compte, vous pouvez en demander la suppression",
-    "helpdeskLinkLabel": "ici",
-    "pixPresentation": "Pix est le service public en ligne pour évaluer, développer et certifier ses compétences numériques.",
-    "moreOn": "En savoir plus sur",
-    "doNotAnswer": "Ceci est un e-mail automatique, merci de ne pas y répondre.",
-    "askForHelp": "Besoin d’aide, contactez-nous"
+    "params": {
+      "title": "Votre compte Pix a bien été créé !",
+      "subtitle": "Vous pouvez désormais commencer les tests.",
+      "goToPix": "Commencer les tests",
+      "disclaimer": "Si vous n'êtes pas à l’origine de cette création de compte, vous pouvez en demander la suppression",
+      "helpdeskLinkLabel": "ici",
+      "pixPresentation": "Pix est le service public en ligne pour évaluer, développer et certifier ses compétences numériques.",
+      "moreOn": "En savoir plus sur",
+      "doNotAnswer": "Ceci est un e-mail automatique, merci de ne pas y répondre.",
+      "askForHelp": "Besoin d’aide, contactez-nous"
+    }
   },
   "reset-password-demand-email": {
     "subject": "Demande de réinitialisation de mot de passe Pix",
