--- a/api/translations/en.json
+++ b/api/translations/en.json
@@ -62,15 +62,17 @@
     "here": "here"
   },
   "pix-account-creation-email": {
-    "title": "Your Pix account has been created !",
-    "subtitle": "You can now start testing your skills.",
-    "goToPix": "Get started",
-    "disclaimer": "If you did not create this account, you can ask its deletion",
-    "helpdeskLinkLabel": "here",
-    "pixPresentation": "Pix is the online public service to assess, develop and certify your digital skills.",
-    "moreOn": "More on",
-    "doNotAnswer": "This is an automated email message, please do not reply.",
-    "askForHelp": "Any questions? We’re here to help, contact us"
+    "params" : {
+      "title": "Your Pix account has been created !",
+      "subtitle": "You can now start testing your skills.",
+      "goToPix": "Get started",
+      "disclaimer": "If you did not create this account, you can ask its deletion",
+      "helpdeskLinkLabel": "here",
+      "pixPresentation": "Pix is the online public service to assess, develop and certify your digital skills.",
+      "moreOn": "More on",
+      "doNotAnswer": "This is an automated email message, please do not reply.",
+      "askForHelp": "Any questions? We’re here to help, contact us"
+    }
   },
   "reset-password-demand-email": {
     "subject": "Pix password reset request",
