--- a/api/translations/fr.json
+++ b/api/translations/fr.json
@@ -74,6 +74,7 @@
     }
   },
   "organization-invitation-email": {
+    "subject": "Invitation à rejoindre Pix Orga",
     "params": {
       "title": "Vous êtes invité(e) à rejoindre Pix Orga",
       "subtitle": "La plateforme Pix Orga vous permet de créer, gérer des campagnes de test et suivre la progression de vos participants.",
