[API] Correct french spoken helpdesk url

--- a/api/translations/en.json
+++ b/api/translations/en.json
@@ -89,8 +89,7 @@
       "pixPresentation": "Pix is the online public service to assess, develop and certify your digital skills.",
       "moreOn": "More on",
       "doNotAnswer": "This is an automated email message, please do not reply. Have questions? We're here to help, ",
-      "contactUs": "contact us here",
-      "helpdeskURL": "http://pix.org/en-gb/help-form"
+      "contactUs": "contact us here"
     }
   },
   "entity-validation-errors": {
