--- a/api/translations/fr.json
+++ b/api/translations/fr.json
@@ -113,8 +113,7 @@
       "pixPresentation": "Pix est le service public en ligne pour évaluer, développer et certifier ses compétences numériques.",
       "moreOn": "En savoir plus sur",
       "doNotAnswer": "Ceci est un e-mail automatique, merci de ne pas y répondre. Besoin d’aide, ",
-      "contactUs": "contactez-nous ici",
-      "helpdeskURL": "https://pix.org/fr/formulaire-aide"
+      "contactUs": "contactez-nous ici"
     }
   },
   "entity-validation-errors": {
