[ORGA] Make link clickable on sup notifications

--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -58,6 +58,7 @@
       "cancel": "Cancel",
       "close": "Close"
     },
+    "help-form": "https://pix.org/en-gb/help-form",
     "pagination": {
       "action": {
         "next": "Go to next page",
