--- a/orga/translations/fr.json
+++ b/orga/translations/fr.json
@@ -58,6 +58,7 @@
       "cancel": "Annuler",
       "close": "Fermer"
     },
+    "help-form": "https://support.pix.fr/support/tickets/new",
     "pagination": {
       "action": {
         "next": "Aller à la page suivante",
