[ORGA][API] Refactor INA_UNIQUE error because it can throw INE uniqueness error too

--- a/orga/translations/fr.json
+++ b/orga/translations/fr.json
@@ -25,8 +25,8 @@
       "field-required": "Ligne {line} : Le champ “{field}” est obligatoire.",
       "header-required": "La colonne “{field}” est obligatoire.",
       "header-unknown": "Les entêtes de colonnes doivent être identiques à celles du modèle.",
+      "identifier-unique": "Ligne {line} : Le champ “{field}” de cette ligne est présent plusieurs fois dans le fichier.",
       "ina-format": "Ligne {line} : Le champ “{field}” (INA) doit être de 10 chiffres suivis d’une lettre.",
-      "ina-unique": "Ligne {line} : Le champ “{field}” de cette ligne est présent plusieurs fois dans le fichier.",
       "insee-code-invalid": "Ligne {line} : Le champ “{field}” n'est pas au format INSEE.",
       "payload-too-large": "La taille du fichier doit être inférieure à {maxSize}Mo.",
       "student-number-format": "Ligne {line} : Le champ “{field}” ne doit pas avoir de caractères spéciaux.",
