--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -25,8 +25,8 @@
       "field-required": "Row {line} : The field “{field}” is mandatory.",
       "header-required": "The “{field}” is mandatory.",
       "header-unknown": "Column headers must be identical to the ones on the template.",
+      "identifier-unique": "Row {line} : The field “{field}” of this row is repeated several times within the file.",
       "ina-format": "Row {line} : The field “{field}” (INA) must contain 10 numbers followed by 1 letter.",
-      "ina-unique": "Row {line} : The field “{field}” of this row is repeated several times within the file.",
       "insee-code-invalid": "Row {line} : The field “{field}” is not in the INSEE format.",
       "payload-too-large": "The file must be less than {maxSize}MB.",
       "student-number-format": "Row {line} : The field “{field}” must not contain any special characters.",
