--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -176,6 +176,9 @@
                     "birth-year": "année de naissance (AAAA)",
                     "first-name": "Prénom",
                     "session-number": "Numéro de session"
+                },
+                "fields-validation": {
+                  "session-number-error": "Le numéro de session est composé uniquement de chiffres."
                 }
             }
         },
