[ORGA] Translate dialog close button aria-label

--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -45,7 +45,8 @@
   "common": {
     "actions": {
       "back": "Back",
-      "cancel": "Cancel"
+      "cancel": "Cancel",
+      "close": "Close"
     },
     "pagination": {
       "action": {
