--- a/orga/translations/fr.json
+++ b/orga/translations/fr.json
@@ -45,7 +45,8 @@
   "common": {
     "actions": {
       "back": "Retour",
-      "cancel": "Annuler"
+      "cancel": "Annuler",
+      "close": "Fermer"
     },
     "pagination": {
       "action": {
