--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -536,6 +536,7 @@
             "campaigns": {
                 "resume": "<h2>N'oubliez pas de finaliser votre envoi de profil !</h2>",
                 "subtitle": "Continuez vos parcours de test en cours ou envoyez vos résultats",
+                "tests-link": "Tous mes parcours",
                 "title": "Parcours"
             },
             "empty-dashboard" : {
